{
    "name": "Player_Actions",
    "maps": [
        {
            "name": "Player",
            "id": "f91280f5-272f-4deb-9c38-2368f2423d58",
            "actions": [
                {
                    "name": "EnableFreeCam",
                    "type": "Button",
                    "id": "693ffaf3-1545-48e5-b54c-53190b33f65c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "596f38dd-216d-4707-bb50-be4b1e286e00",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EnableFreeCam",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "FreeCam",
            "id": "7b4ad4ad-f9ef-4a29-a691-3510abf2ac32",
            "actions": [
                {
                    "name": "disableFreeCam",
                    "type": "Button",
                    "id": "3a8af39f-d110-4bd0-bea9-8eb897cd769b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "camMove",
                    "type": "Value",
                    "id": "dfe8977a-ca0c-48cd-bf47-02c272b1db66",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "camLook",
                    "type": "Value",
                    "id": "c7973927-da3b-4ec7-826f-8c6ca2f9a60b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "camUp",
                    "type": "Button",
                    "id": "3c80a087-edc2-4ba3-94fb-bd6b19564595",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "camDown",
                    "type": "Button",
                    "id": "edeccf11-6d0b-435b-986f-77c059ad53f5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "camFast",
                    "type": "Button",
                    "id": "d843d120-c079-4cce-b9f0-6a028013ceee",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "camTimeSwap",
                    "type": "Button",
                    "id": "325bbda0-1136-4eeb-a5df-5bef270a6d36",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b77fb0b8-8899-46a9-8cda-9bd412867172",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "disableFreeCam",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "f023e5c2-956d-4ea8-98c1-ae12f6d2a959",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "camMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "27786fbc-f6d5-49de-b354-1bc4552235b8",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "camMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "357b83b0-351a-4819-bce6-d56e04cf0440",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "camMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "718a38ba-6583-4c5b-881b-61c77a877841",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "camMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "a359f803-76ab-4491-8b41-482f96b29d19",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "camMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "d57b1674-61ba-46ef-b816-89088c853cec",
                    "path": "<Keyboard>/e",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "camUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c150203e-c705-428a-bac9-ec19b2b20177",
                    "path": "<Keyboard>/q",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "camDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0f177398-0803-4579-923d-5e45d81b853d",
                    "path": "<Keyboard>/shift",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "camFast",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "50714740-e66d-4b01-bdd8-5ecc5ed06b2c",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "camTimeSwap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "18886fb7-c42c-4311-a47f-3a0166b7e5e8",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "camLook",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}